# serializer version: 1
# name: test_all_entities[da_ks_oven_01061][select.oven_lamp-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'off',
        'high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.oven_lamp',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Lamp',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'lamp',
    'unique_id': '9447959a-0dfa-6b27-d40d-650da525c53f_main_samsungce.lamp_brightnessLevel_brightnessLevel',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ks_oven_01061][select.oven_lamp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Oven Lamp',
      'options': list([
        'off',
        'high',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.oven_lamp',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[da_ks_range_0101x][select.vulcan_lamp-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'off',
        'extra_high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.vulcan_lamp',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Lamp',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'lamp',
    'unique_id': '2c3cbaa0-1899-5ddc-7b58-9d657bd48f18_main_samsungce.lamp_brightnessLevel_brightnessLevel',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ks_range_0101x][select.vulcan_lamp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Vulcan Lamp',
      'options': list([
        'off',
        'extra_high',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.vulcan_lamp',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'extra_high',
  })
# ---
# name: test_all_entities[da_wm_dw_000001][select.dishwasher-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'stop',
        'run',
        'pause',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.dishwasher',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'operating_state',
    'unique_id': 'f36dc7ce-cac0-0667-dc14-a3704eb5e676_main_dishwasherOperatingState_machineState_machineState',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_wm_dw_000001][select.dishwasher-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dishwasher',
      'options': list([
        'stop',
        'run',
        'pause',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.dishwasher',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'stop',
  })
# ---
# name: test_all_entities[da_wm_sc_000001][select.airdresser-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'stop',
        'run',
        'pause',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.airdresser',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'operating_state',
    'unique_id': 'b93211bf-9d96-bd21-3b2f-964fcc87f5cc_main_dryerOperatingState_machineState_machineState',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_wm_sc_000001][select.airdresser-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AirDresser',
      'options': list([
        'stop',
        'run',
        'pause',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airdresser',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'stop',
  })
# ---
# name: test_all_entities[da_wm_wd_000001][select.dryer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'stop',
        'run',
        'pause',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.dryer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'operating_state',
    'unique_id': '02f7256e-8353-5bdd-547f-bd5b1647e01b_main_dryerOperatingState_machineState_machineState',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_wm_wd_000001][select.dryer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dryer',
      'options': list([
        'stop',
        'run',
        'pause',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.dryer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'stop',
  })
# ---
# name: test_all_entities[da_wm_wd_000001_1][select.seca_roupa-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'stop',
        'run',
        'pause',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.seca_roupa',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'operating_state',
    'unique_id': '3a6c4e05-811d-5041-e956-3d04c424cbcd_main_dryerOperatingState_machineState_machineState',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_wm_wd_000001_1][select.seca_roupa-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Seca-Roupa',
      'options': list([
        'stop',
        'run',
        'pause',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.seca_roupa',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'stop',
  })
# ---
# name: test_all_entities[da_wm_wm_000001][select.washer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'stop',
        'run',
        'pause',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.washer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'operating_state',
    'unique_id': 'f984b91d-f250-9d42-3436-33f09a422a47_main_washerOperatingState_machineState_machineState',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_wm_wm_000001][select.washer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Washer',
      'options': list([
        'stop',
        'run',
        'pause',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.washer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'stop',
  })
# ---
# name: test_all_entities[da_wm_wm_000001][select.washer_soil_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'none',
        'extra_light',
        'light',
        'normal',
        'heavy',
        'extra_heavy',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.washer_soil_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Soil level',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'soil_level',
    'unique_id': 'f984b91d-f250-9d42-3436-33f09a422a47_main_custom.washerSoilLevel_washerSoilLevel_washerSoilLevel',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_wm_wm_000001][select.washer_soil_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Washer Soil level',
      'options': list([
        'none',
        'extra_light',
        'light',
        'normal',
        'heavy',
        'extra_heavy',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.washer_soil_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'normal',
  })
# ---
# name: test_all_entities[da_wm_wm_000001_1][select.washing_machine-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'stop',
        'run',
        'pause',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.washing_machine',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'operating_state',
    'unique_id': '63803fae-cbed-f356-a063-2cf148ae3ca7_main_washerOperatingState_machineState_machineState',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_wm_wm_000001_1][select.washing_machine-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Washing Machine',
      'options': list([
        'stop',
        'run',
        'pause',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.washing_machine',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'run',
  })
# ---
# name: test_all_entities[da_wm_wm_01011][select.machine_a_laver-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'stop',
        'run',
        'pause',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.machine_a_laver',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'operating_state',
    'unique_id': 'b854ca5f-dc54-140d-6349-758b4d973c41_main_washerOperatingState_machineState_machineState',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_wm_wm_01011][select.machine_a_laver-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Machine à Laver',
      'options': list([
        'stop',
        'run',
        'pause',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.machine_a_laver',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'run',
  })
# ---
# name: test_all_entities[da_wm_wm_01011][select.machine_a_laver_detergent_dispense_amount-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'none',
        'less',
        'standard',
        'extra',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.machine_a_laver_detergent_dispense_amount',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Detergent dispense amount',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'detergent_amount',
    'unique_id': 'b854ca5f-dc54-140d-6349-758b4d973c41_main_samsungce.autoDispenseDetergent_amount_amount',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_wm_wm_01011][select.machine_a_laver_detergent_dispense_amount-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Machine à Laver Detergent dispense amount',
      'options': list([
        'none',
        'less',
        'standard',
        'extra',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.machine_a_laver_detergent_dispense_amount',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'standard',
  })
# ---
# name: test_all_entities[da_wm_wm_01011][select.machine_a_laver_flexible_compartment_dispense_amount-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'none',
        'less',
        'standard',
        'extra',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.machine_a_laver_flexible_compartment_dispense_amount',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Flexible compartment dispense amount',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'flexible_detergent_amount',
    'unique_id': 'b854ca5f-dc54-140d-6349-758b4d973c41_main_samsungce.flexibleAutoDispenseDetergent_amount_amount',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_wm_wm_01011][select.machine_a_laver_flexible_compartment_dispense_amount-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Machine à Laver Flexible compartment dispense amount',
      'options': list([
        'none',
        'less',
        'standard',
        'extra',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.machine_a_laver_flexible_compartment_dispense_amount',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'standard',
  })
# ---
# name: test_all_entities[da_wm_wm_100001][select.washer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'run',
        'pause',
        'stop',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.washer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'operating_state',
    'unique_id': 'aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee_main_washerOperatingState_machineState_machineState',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_wm_wm_100001][select.washer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Washer',
      'options': list([
        'run',
        'pause',
        'stop',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.washer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'stop',
  })
# ---
